--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,30 @@
 
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+#grid { 
+    display: grid; 
+    grid-template-columns: repeat(16, auto);
+    grid-template-rows: repeat(16, auto); 
+    gap: 0;
+    margin-top: 50px;
+    width: 500px;
+}
+
+.cell {
+    padding: 15px;
+    border: 1px solid black;
+    background: white;
+}
+
+@media screen and (max-width:768px) {
+    #grid { 
+        grid-template-columns: auto; 
+    }
+}
 
 
